--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "three-mesh-bvh": "^0.7.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
